add Source for json file，fix editor err when id has /